circletext works but
superfamilies are still broken and the families show the wrong names

--- a/beetletvis-data-2.html
+++ b/beetletvis-data-2.html
@@ -716,14 +716,12 @@
 
             // START FUNCTIONS AND EVENTLISTENERS
 
+
             // START TREE SCRIPT 
-
-            // want to change currentgroup to clicked folder
-            //currentgroup = beetledata['order-Coleoptera']//['suborder-Protocoleoptera']['infraorder-None']['clade-None']; // type: object
-
-            //console.log(document.getElementById('h1Button').textContent)
-
+            
             var currentgroup;
+
+            // currently suspicious its something wrong wtih this tree function
 
             $(function () {
                 selectedgroup = [];
@@ -952,7 +950,7 @@
                 });
                 return result;
             };
-            // START COUNTGROUPS FUNCTION
+            // END COUNTGROUPS FUNCTION
 
             // START FINDGROUPS FUNCTION
             function findGroups(group) {
